CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(UNITTESTS_PROJECT ExTh-UnitTests)
MESSAGE(STATUS "Building ${UNITTESTS_PROJECT}")
PROJECT(${UNITTESTS_PROJECT} CXX)

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
ENDIF()

SET(UNITTESTS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "${UNITTESTS_PROJECT} src dir: ${UNITTESTS_SRC_DIR}")
SET(UNITTESTS_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${UNITTESTS_PROJECT} bin dir: ${UNITTESTS_BIN_DIR}")


INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)

MESSAGE(STATUS "${UNITTESTS_PROJECT} libraires: ${UNITTESTS_LIBRARIES}")
MESSAGE(STATUS "${UNITTESTS_PROJECT} Qt modules: ${UNITTESTS_QT_MODULES}")
MESSAGE(STATUS "${UNITTESTS_PROJECT} include dirs: ${UNITTESTS_INCLUDE_DIRS}")

ADD_EXECUTABLE(${UNITTESTS_PROJECT} ${UNITTESTS_SRC_FILES})
TARGET_LINK_LIBRARIES(${UNITTESTS_PROJECT} ${UNITTESTS_LIBRARIES})
QT5_USE_MODULES(${UNITTESTS_PROJECT} ${UNITTESTS_QT_MODULES})
INCLUDE_DIRECTORIES(${UNITTESTS_INCLUDE_DIRS})
